--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
-alembic (1.7.5)
-click (8.0.3)
-dataclasses (0.8)
-Flask (2.0.2)
-Flask-Migrate (3.1.0)
-Flask-SQLAlchemy (2.5.1)
-greenlet (1.1.2)
-importlib-metadata (4.8.2)
-importlib-resources (5.4.0)
-itsdangerous (2.0.1)
-Jinja2 (3.0.3)
-Mako (1.1.5)
-MarkupSafe (2.0.1)
-migrate (0.3.8)
-numpy (1.19.5)
-pandas (1.1.5)
-pip (9.0.1)
-pkg-resources (0.0.0)
-PyMySQL (1.0.2)
-python-dateutil (2.8.2)
-pytz (2021.3)
-setuptools (39.0.1)
-six (1.16.0)
-SQLAlchemy (1.4.27)
-typing-extensions (4.0.0)
-Werkzeug (2.0.2)
-zipp (3.6.0)
+alembic==1.7.5
+click==8.0.3
+dataclasses==0.8
+Flask==2.0.2
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+Mako==1.1.5
+MarkupSafe==2.0.1
+migrate==0.3.8
+numpy==1.19.5
+pandas==1.1.5
+pkg-resources==0.0.0
+PyMySQL==1.0.2
+python-dateutil==2.8.2
+python-dotenv==0.19.2
+pytz==2021.3
+six==1.16.0
+SQLAlchemy==1.4.27
+typing-extensions==4.0.0
+Werkzeug==2.0.2
+zipp==3.6.0
